# terez

./: .hgignore  README.md
SDL/: .hg_archival.txt
box2d/: box2d.mkf
oxygine-flow/: .gitignore  .hgignore  Android.mk  CMakeLists.txt  README.md
oxygine-flow/src/flow/: Scene.cpp  Scene.h  Transition.cpp  Transition.h  flow.cpp  flow.h
oxygine-framework/: .gitignore  Android.mk  CMakeLists.txt  Doxyfile  readme.md
oxygine-framework/3rdPartyTools/BMFont/: bmfont.bmfc
oxygine-framework/cmake/: FindSDL2.cmake
oxygine-framework/examples/Demo/: prepare_res.bat  prepare_res.sh  prepare_res_pvrtc.sh  prepare_res_pvrtc_high_quality.sh
oxygine-framework/libs/: SDL2.lib  SDL2main.lib
oxygine-framework/oxygine/marmalade/: oxygine-framework.mkf
oxygine-framework/oxygine/src/: Actor.cpp  Actor.h  AnimationFrame.cpp  AnimationFrame.h  AsyncTask.cpp  AsyncTask.h  Box9Sprite.cpp  Box9Sprite.h  Button.cpp  Button.h  ClipRectActor.cpp  ClipRectActor.h  Clock.cpp  Clock.h  ColorRectSprite.cpp  ColorRectSprite.h  DebugActor.cpp  DebugActor.h  Draggable.cpp  Draggable.h  Event.h  EventDispatcher.cpp  EventDispatcher.h  (+63 more)
oxygine-framework/readme/: Android.txt  CMake+MinGW.txt  CMake.txt  MacOSX.txt  Marmalade.txt  VisualStudio.txt  emscripten.txt  iOS.txt  readme.txt
oxygine-framework/tools/: gen_template  gen_template.cmd  gen_template.py  install.py  oxygine.py  oxyresbuild  oxyresbuild.cmd  oxyresbuild.py
oxygine-sound/: .gitignore  Android.mk  CMakeLists.txt  LICENSE  readme.linux
oxygine-sound/proj.win32/: oxygine-sound.vcxproj
oxygine-sound/src/: Channel.h  Channels.h  MemoryStream.cpp  MemoryStream.h  OggStream.cpp  OggStream.h  ResSound.cpp  ResSound.h  Sound.h  SoundInstance.cpp  SoundInstance.h  SoundPlayer.cpp  SoundPlayer.h  SoundSystem.h
tereZ/data-src/: buttons.xcf
tereZ/proj.android/: AndroidManifest.xml  build.xml  install.bat  install.sh  project.properties
tereZ/proj.cmake/: CMakeLists.txt  run.sh
tereZ/proj.emscripten/: CMakeLists.txt  build.bat  build_release.bat
tereZ/proj.win32/: tereZ.sln  tereZ.vcxproj  tereZ.vcxproj.filters
tereZ/src/: Box2DDebugDraw.cpp  Box2DDebugDraw.h  Door.cpp  Door.h  EndScene.cpp  EndScene.h  Game.cpp  Game.h  GameMenu.cpp  GameMenu.h  GameScene.cpp  GameScene.h  GameSound.cpp  GameSound.h  LevelRes.cpp  LevelRes.h  MainMenuScene.cpp  MainMenuScene.h  MyButton.cpp  MyButton.h  Player.cpp  Player.h  Scene.cpp  Scene.h  Trap.cpp  Trap.h  example.cpp  main.cpp  res.cpp
(+562 files in other folders)
